tests/ui/macros/panic-temporaries.stderr
error: future cannot be sent between threads safely
  --> $DIR/panic-temporaries.rs:18:18
   |
LL |     require_send(g());
   |                  ^^^ future returned by `g` is not `Send`
   |
   = help: the trait `Sync` is not implemented for `core::fmt::Opaque`
note: future is not `Send` as this value is used across an await
  --> $DIR/panic-temporaries.rs:12:20
   |
LL |     f(todo!("...")).await;
   |       ------------ ^^^^^^ await occurs here, with `$crate::format_args!($($arg)+)` maybe used later
   |       |
   |       has type `ArgumentV1<'_>` which is not `Send`
note: `$crate::format_args!($($arg)+)` is later dropped here
  --> $DIR/panic-temporaries.rs:12:26
   |
LL |     f(todo!("...")).await;
   |                          ^
note: required by a bound in `require_send`
  --> $DIR/panic-temporaries.rs:15:25
   |
LL | fn require_send(_: impl Send) {}
   |                         ^^^^ required by this bound in `require_send`

error: aborting due to previous error

